@@ -1,5 +1,9 @@
 #!/bin/sh
 
+COLOR_RESET='\033[0m'
+COLOR_RED='\033[0;31m'
+TEXT_BLINK='\033[5m'
+
 #############
 # variables #
 #############
@@ -65,6 +69,16 @@ download_system_update() {
     fi
 }
 
+has_pending_be() {
+    if /sbin/bectl list -H | cut -f 2 | grep -qE "(RN|NR)"; then
+        return 1
+    else
+        sed -i '' '/Upgrade:/d' /var/run/motd
+        /usr/bin/printf "${COLOR_RED}${TEXT_BLINK}Upgrade: the system has a pending kernel/userland upgrade, please restart your machine to apply${COLOR_RESET}\n" | tee -a /var/run/motd
+        return 0
+    fi
+}
+
 # Function used to use appropriate update binary
 update_system() {
     download_dir="$1"
@@ -79,6 +93,15 @@ update_system() {
                 # use -j flag from hbsd-update to let it handle upgrade of "full" jail
                 options="-j $jail"
             fi
+        else
+            # If the current Boot Environment (BE) is not Active now AND on the next boot (N + R)
+            # then the machine needs to be restarted before trying to upgrade the kernel+base again
+            if has_pending_be; then
+                /usr/bin/printf "${COLOR_RED}Detected a pending boot environment, won't upgrade your kernel! You need to restart the machine first!${COLOR_RESET}\n" 1>&2
+                return 0;
+            fi
+            new_be="Vulture-auto-$(uname -K)-$(date +%Y%m%d%H%M%S)"
+            options="${options} -b $new_be"
         fi
         if [ -n "$system_version" ]; then
             # Add -U as non-last update versions cannot be verified
@@ -238,6 +261,8 @@ finalize() {
         # Restart Vultured after upgrade
         /usr/sbin/service vultured start
     fi
+
+    has_pending_be
 
     echo "[$(date +%Y-%m-%dT%H:%M:%S+00:00)] Upgrade finished!"
     exit $err_code
